--- a/Readme
+++ b/Readme
@@ -1,2 +1,4 @@
 # mini-message-board
+MINI MESSAGE BOARD
+a super simple message board created using Express and deployed with heroku.
 https://odin-mini-msg-board.herokuapp.com/
